--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1348,7 +1348,7 @@ a.goUp span {
   display: none;
   width: max-content;
   position: absolute;
-  right: 100%;
+  left: 100%;
   top: 50%;
   transform: translateY(-50%);
   transition: 0.6s;
@@ -1481,6 +1481,10 @@ body.ar header .container a.lang-change {
 }
 body.ar .landing-page .simple-info .simple-intro .domain {
   letter-spacing: 0;
+}
+body.ar a.goUp span {
+  left: auto;
+  right: 100%;
 }
 
 /* landing-page */
