--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1221,12 +1221,12 @@ body.both section.about .about-bg::after {
   height: 100%;
   background-image: linear-gradient(to right, transparent, black 60%);
 }
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
   body.both section.about .about-bg::after {
     background-image: none;
     background-color: #000000c2;
   }
-}
+} */
 body.both section.about .about-bg .content {
   position: relative;
   z-index: 1;
@@ -1277,9 +1277,7 @@ body.both section.about .about-bg .content p::after {
   }
 }
 body.both section.about .about-bg .content a.about-btn {
-  /* display: block; */
   font-size: 20px;
-  /* width: fit-content; */
   text-transform: uppercase;
   transition: 0.6s;
   -webkit-transition: 0.6s;
@@ -1290,6 +1288,12 @@ body.both section.about .about-bg .content a.about-btn {
 @media (max-width: 320px) {
   body.both section.about .about-bg .content a.about-btn {
     font-size: 14px;
+  }
+}
+@media (max-width: 767px) {
+  body.both section.about .about-bg .content a.about-btn {
+    display: block;
+    text-align: center;
   }
 }
 body.both section.about .about-bg .content a.about-btn:hover i {
