--- a/CSS/style.css
+++ b/CSS/style.css
@@ -173,6 +173,9 @@ body.both header .container nav ul.mainUl a:hover {
     display: block;
     text-align: center;
   }
+  body.both header .container nav ul.mainUl a > i {
+    display: block;
+  }
 }
 
 body.both header .container .mega-menu {
@@ -1222,12 +1225,12 @@ body.both section.about .about-bg::after {
   height: 100%;
   background-image: linear-gradient(to right, transparent, black 60%);
 }
-/* @media (max-width: 767px) {
+@media (max-width: 767px) {
   body.both section.about .about-bg::after {
     background-image: none;
-    background-color: #000000c2;
+    background-color: #000000c4;
   }
-} */
+}
 body.both section.about .about-bg .content {
   position: relative;
   z-index: 1;
@@ -1326,7 +1329,13 @@ body.both section.about .about-bg .content a.about-btn:hover i {
 
 /* about-section */
 /* contact-section */
+@media (max-width: 320px) {
+  section.contact {
+    padding: 15px;
+  }
+}
 section.contact .container {
+  display: flex;
   justify-content: space-between;
   border-radius: 15px;
   -webkit-border-radius: 15px;
@@ -1335,9 +1344,20 @@ section.contact .container {
   -o-border-radius: 15px;
   box-shadow: var(--main-box-shadow);
 }
+@media (max-width: 787px) {
+  section.contact .container {
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+}
 section.contact form.contact-area {
-  /* margin: auto; */
   width: 45%;
+}
+@media (max-width: 787px) {
+  section.contact form.contact-area {
+    width: 100%;
+    margin-bottom: 40px;
+  }
 }
 section.contact form.contact-area *:not(label span) {
   display: block;
@@ -1345,6 +1365,8 @@ section.contact form.contact-area *:not(label span) {
 }
 section.contact form.contact-area label {
   margin-bottom: 5px !important;
+  color: var(--main-color);
+  font-weight: 600;
 }
 section.contact form.contact-area input,
 section.contact form.contact-area textarea {
@@ -1363,6 +1385,31 @@ section.contact form.contact-area textarea {
   height: 100px;
   padding-top: 10px;
 }
+section.contact form.contact-area button {
+  background-color: var(--main-color);
+  outline: none;
+  border: none;
+  margin-right: 0;
+  margin-left: auto;
+  padding: 5px 30px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  color: white;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  font-family: inherit;
+}
+section.contact form.contact-area button:hover {
+  background-color: black;
+}
 section.contact div.orContact {
   position: relative;
   width: 45%;
@@ -1371,6 +1418,19 @@ section.contact div.orContact {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+@media (max-width: 787px) {
+  section.contact div.orContact {
+    width: 100%;
+  }
+  section.contact div.orContact img {
+    display: none;
+  }
 }
 section.contact div.orContact h1 {
   color: var(--main-color);
@@ -1379,13 +1439,12 @@ section.contact div.orContact::before,
 section.contact div.orContact::after {
   content: "";
   position: absolute;
-  left: -50px;
+  left: -12%;
 }
 section.contact div.orContact::before {
   top: 0;
   width: 1px;
   height: 100%;
-  /* background-color: #01070c; */
   background-color: var(--main-color);
 }
 section.contact div.orContact::after {
@@ -1398,7 +1457,7 @@ section.contact div.orContact::after {
   width: 20px;
   height: 20px;
   top: 50%;
-  left: calc(-50px + -11px);
+  left: calc(-12% + -11px);
   transform: translateY(-50%);
   background-color: #ddd;
   -webkit-transform: translateY(-50%);
@@ -1413,6 +1472,37 @@ section.contact div.orContact::after {
   border: 1px solid var(--main-color);
   color: var(--main-color);
   outline: 5px solid #ddd;
+}
+@media (max-width: 787px) {
+  section.contact div.orContact::before,
+  section.contact div.orContact::after {
+    top: -18%;
+  }
+  section.contact div.orContact::before {
+    width: 100%;
+    height: 1px;
+    left: 0;
+  }
+  section.contact div.orContact::after {
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+  }
+}
+section.contact div.orContact a.contactMail {
+  color: green;
+  transition: 0.6s ease;
+  -webkit-transition: 0.6s ease;
+  -moz-transition: 0.6s ease;
+  -ms-transition: 0.6s ease;
+  -o-transition: 0.6s ease;
+}
+section.contact div.orContact a.contactMail:hover {
+  color: red;
+  text-decoration: underline;
 }
 /* contact-section */
 /* GO UP BTN*/
@@ -1609,28 +1699,50 @@ body.ar .services-holder .service-wedget a.ser-details {
 /* services-section */
 /* about-section */
 body.ar section.about .about-bg::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
   background-image: linear-gradient(to left, transparent, black 60%);
+}
+@media (max-width: 767px) {
+  body.ar section.about .about-bg::after {
+    background-image: none;
+  }
 }
 /* about-section */
 /* contact-section */
-section.contact form.contact-area input,
-section.contact form.contact-area textarea {
+body.ar section.contact form.contact-area input,
+body.ar section.contact form.contact-area textarea {
   padding-right: 20px;
+}
+body.ar section.contact form.contact-area button {
+  margin-left: 0;
+  margin-right: auto;
 }
 body.ar section.contact div.orContact::before,
 body.ar section.contact div.orContact::after {
-  left: -50px;
-  right: -50px;
+  right: -12%;
+  left: auto;
 }
 body.ar section.contact div.orContact::after {
   content: "أو";
-  right: calc(-50px + -10px);
+  right: calc(-12% + -10px);
+}
+@media (max-width: 787px) {
+  body.ar section.contact div.orContact::before,
+  body.ar section.contact div.orContact::after {
+    top: -18%;
+  }
+  body.ar section.contact div.orContact::before {
+    left: 0;
+    right: 0;
+  }
+  body.ar section.contact div.orContact::after {
+    left: 50%;
+    transform: translate(-50%, -50%);
+    right: auto;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+  }
 }
 /* contact-section */
 
