--- a/CSS/fw.css
+++ b/CSS/fw.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Playfair+Display:ital,wght@1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap");
 
 /* border */
 .br-3 {
@@ -115,6 +116,9 @@
 }
 .mr-auto {
   margin-right: auto;
+}
+.mr-5 {
+  margin-right: 5px;
 }
 .mr-10 {
   margin-right: 10px;
@@ -406,6 +410,9 @@
 .text-lower {
   text-transform: lowercase;
 }
+.text-upper {
+  text-transform: uppercase;
+}
 .text-capa {
   text-transform: capitalize;
 }
@@ -421,6 +428,9 @@
 }
 .ff-ReemKufi {
   font-family: "Reem Kufi", sans-serif;
+}
+.ff-Teko {
+  font-family: "Teko", sans-serif;
 }
 /* font */
 /* other */
