--- a/CSS/style.css
+++ b/CSS/style.css
@@ -333,13 +333,21 @@ a.search-bar:hover {
   color: white;
   right: 30px;
   top: 30px;
-  font-size: 40px;
+  font-size: 30px;
   transition: .3s ease;
   -webkit-transition: .3s ease;
   -moz-transition: .3s ease;
   -ms-transition: .3s ease;
   -o-transition: .3s ease;
   cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border: 2px solid ;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 .search-page i#cancle-btn:hover {
   color: #f44336;
@@ -874,13 +882,32 @@ body.both .landing-page a.menu-angles i {
   background-color: black;
   color: white;
 }
-body.leon-page .back{
-  font-size: 30px;
+
+/* Projects info pages style */
+/* Both */
+body.project-info-page .back{
+  font-size: 25px;
   left: 40px;
   top: 30px;
   cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border: 2px solid ;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  transition: .3s ease;
+  -webkit-transition: .3s ease;
+  -moz-transition: .3s ease;
+  -ms-transition: .3s ease;
+  -o-transition: .3s ease;
 }
-body.leon-page .container .content img {
+body.project-info-page .back:hover {
+  color: var(--main-color);
+}
+body.project-info-page .container .content img {
   width: 50%;
   margin-right: 30px;
   border-radius: 15px;
@@ -891,52 +918,59 @@ body.leon-page .container .content img {
   align-self: flex-start;
 }
 
-body.leon-page .container .content .info {
+body.project-info-page .container .content .info {
   width: 40%;
+  /* background-color: #eee; */
 }
-body.leon-page .container .content .info h2 {
+body.project-info-page .container .content .info h2 {
   text-transform: capitalize;
   color: var(--main-color);
   font-weight: 400;
-
+  border-bottom: 2px solid ;
+  padding: 1px;
+  margin: 1px;
 }
-body.leon-page .container .content .info h2 span {
+body.project-info-page .container .content .info h2:first-child {
+  border-top: 2px solid ;
+}
+body.project-info-page .container .content .info h2 span {
   color: #999;
   margin-left: 10px;
 }
 @media (max-width: 767px){
-  body.leon-page .container .content {
+  body.project-info-page .container .content {
     flex-wrap: wrap;
     flex-direction: column;
     width: 100%;
     text-align: center;
   }
-  body.leon-page .container .content img {
+  body.project-info-page .container .content img {
     margin-bottom: 20px;
   }
-  body.leon-page .container .content img,
-  body.leon-page .container .content .info {
+  body.project-info-page .container .content img,
+  body.project-info-page .container .content .info {
     width: 100%;
   }
-  body.leon-page .container .content .info h2 span{
+  body.project-info-page .container .content .info h2 span{
     display: block;
     font-size: 20px;
+    margin-left: 0;
   }
-  body.leon-page .container .content .info a{
+  body.project-info-page .container .content .info a{
     margin: 20px auto;
   }
 }
-/* ar */
-  body.leon-page-ar .container .content img {
+/* Just for Ar */
+  body.project-info-page-ar .container .content img {
     margin-right: auto;
     margin-left: 30px;
   }
-  body.leon-page-ar .back{
+  body.project-info-page-ar .back{
   right: 40px;
   left: auto;
   rotate: 180deg;
 }
-body.leon-page-ar .container .content .info h2 span {
+body.project-info-page-ar .container .content .info h2 span {
   margin-left: auto;
   margin-right: 10px;
 }
