--- a/CSS/style.css
+++ b/CSS/style.css
@@ -329,7 +329,7 @@ a.search-bar:hover {
     flex-direction: column;
   }
 }
-.search-page i#cancle-btn {
+.search-page i#cancel-btn {
   color: white;
   right: 30px;
   top: 30px;
@@ -349,7 +349,7 @@ a.search-bar:hover {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-.search-page i#cancle-btn:hover {
+.search-page i#cancel-btn:hover {
   color: #f44336;
 }
 .search-page h1  {
@@ -877,6 +877,7 @@ body.both .landing-page a.menu-angles i {
   -moz-transition: 0.3s;
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
+  cursor: pointer;
 }
 .projects a.projects-more-btn:hover {
   background-color: black;
@@ -973,6 +974,10 @@ body.project-info-page .container .content .info h2 span {
 body.project-info-page-ar .container .content .info h2 span {
   margin-left: auto;
   margin-right: 10px;
+}
+
+.hiddenItem {
+  display: none;
 }
 
 /* projects-section */
@@ -1947,7 +1952,7 @@ body.ar textarea::placeholder {
   font-family: "Cairo", sans-serif;
 }
 
-body.ar .search-page i#cancle-btn {
+body.ar .search-page i#cancel-btn {
   right: auto;
   left: 30px;
 }
